--- a/asstesClient/css/home.css
+++ b/asstesClient/css/home.css
@@ -43,7 +43,7 @@ header{
     font-size: 60px;
     font-weight: 700;
     margin: 30px 0;
-    font-family: 'Raleway' ,'Droid Sans';
+    font-family: Cairo;
 
 }
 .gradient-text {
@@ -114,7 +114,7 @@ header{
 /* title section*/
 .features .title-section{
     font-weight: 700;
-    font-family: 'Raleway' ,'Droid Sans';
+    font-family: Cairo;
     line-height: 72.3px;
     letter-spacing: 1.7px;
     margin: 30px 0;
@@ -172,7 +172,7 @@ header{
 }
 .text-features{
     color: #93969D;
-    font-family: 'Droid Sans';
+    font-family: Cairo;
     font-size: 14px;
     font-weight: 400;
     line-height: 24.1px;
@@ -231,7 +231,7 @@ header{
 ==============================*/
 .title-scroll{
     font-weight: 700;
-    font-family: 'Raleway' ,'Droid Sans';
+    font-family: Cairo;
     line-height: 72.3px;
     letter-spacing: 1.7px;
     color: var(--color);
