--- a/asstesClient/css/services.css
+++ b/asstesClient/css/services.css
@@ -44,7 +44,7 @@ header{
   font-size: 60px;
   font-weight: 700;
   margin: 30px 0;
-  font-family: 'Raleway' ,'Droid Sans';
+  font-family: Cairo;
 
 }
 .text-header h4{
@@ -52,7 +52,7 @@ header{
   font-weight: 400;
   color: var(--p);
   margin: 30px 0;
-  font-family: 'Raleway' ,'Droid Sans';
+  font-family: Cairo;
 
 }
 
@@ -130,7 +130,7 @@ header{
 /* Title content */
 .title{
     font-weight: 700;
-    font-family: 'Raleway' ,'Droid Sans';
+    font-family: Cairo;
     line-height: 72.3px;
     letter-spacing: 1.7px;
     color: var(--color);
@@ -868,3 +868,375 @@ header{
 /*==============================
 End Responsive
 ==============================*/  
+
+
+/*--
+/*  03 - Choose Us CSS
+/*----------------------------------------*/
+.techwix-choose-us-section {
+  padding-top: 210px;
+}
+
+.techwix-choose-us-section .section-title {
+  max-width: 570px;
+  margin: 0 auto;
+  color: var(--color);
+}
+
+.choose-us-content-wrap {
+  padding-top: 30px;
+}
+
+.choose-us-content-wrap .more-choose-content {
+  margin-top: 30px;
+}
+
+.choose-us-content-wrap .more-choose-content p {
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.choose-us-content-wrap .more-choose-content p a {
+  font-weight: 600;
+  color: #086ad8;
+}
+
+.choose-us-content-wrap .more-choose-content p a i {
+  position: relative;
+  top: 1px;
+  transition: all 0.3s linear;
+}
+
+.choose-us-content-wrap .more-choose-content p a:hover i {
+  margin-left: 5px;
+}
+
+.choose-us-item {
+  margin-top: 30px;
+}
+
+.choose-us-item .choose-us-img {
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: all 0.3s linear;
+}
+
+.choose-us-item .choose-us-img a {
+  display: block;
+  position: relative;
+}
+
+.choose-us-item .choose-us-img a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: linear-gradient(180deg, rgba(249, 80, 0, 0) 35%, rgba(14, 14, 14, 0.92) 78%);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.choose-us-item .choose-us-img .choose-us-content {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  padding: 60px 60px;
+  padding-right: 75px;
+}
+
+.choose-us-item .choose-us-img .choose-us-content .title {
+  font-size: 24px;
+  line-height: 27px;
+  color: #ffffff;
+  padding-left: 15px;
+  position: relative;
+}
+
+.choose-us-item .choose-us-img .choose-us-content .title::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  background: linear-gradient(-160deg, #43baff 0%, #7141b1 100%);
+  width: 3px;
+  height: 50px;
+  transform: translateY(-50%);
+}
+
+.choose-us-item .choose-us-img .choose-us-content p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #ffffff;
+  margin-top: 20px;
+  margin-bottom: -115px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s linear;
+}
+
+.choose-us-item:hover .choose-us-img .choose-us-content p {
+  opacity: 1;
+  visibility: visible;
+  margin-bottom: 0px;
+}
+
+@media only screen and (max-width: 1399px) {
+  .choose-us-item .choose-us-img .choose-us-content {
+    padding-right: 40px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .choose-us-item .choose-us-img .choose-us-content {
+    padding: 40px 30px;
+    padding-right: 25px;
+  }
+}
+
+.techwix-choose-us-section-02 {
+  background: #f8f8f8;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding-bottom: 400px;
+  z-index: 1;
+}
+
+.techwix-choose-us-section-02 .choose-us-left {
+  padding-right: 50px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .text {
+  font-size: 16px;
+  line-height: 30px;
+  margin-top: 40px;
+  padding-right: 65px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  padding-right: 40px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .author-wrap .name {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .author-wrap .designation {
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap {
+  flex: 1;
+  padding-left: 50px;
+  margin-left: 30px;
+  position: relative;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  background: #ececec;
+  width: 2px;
+  height: 95px;
+  transform: translateY(-50%);
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap .counter-bar {
+  padding-top: 0px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap .counter-bar .skill-item {
+  margin-top: 15px;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap .counter-bar .skill-item.skill-item-01 {
+  margin-top: 0;
+}
+
+.techwix-choose-us-section-02 .choose-us-left .author-skill-wrap .skill-wrap .counter-bar .skill-item .skill-bar .bar-inner .progress-line {
+  background: #086ad8;
+}
+
+.techwix-choose-us-section-02 .choose-us-right {
+  padding-left: 10px;
+}
+
+@media only screen and (max-width: 991px) {
+  .techwix-choose-us-section-02 .choose-us-right .faq-accordion {
+    margin-top: 50px;
+  }
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item {
+  border: 0;
+  box-shadow: 0px 0px 161px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 35px;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button {
+  padding: 25px 35px;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button .title {
+  font-size: 22px;
+  color: #0e0e0e;
+  font-family: "Barlow", sans-serif;
+  display: inline-block;
+  font-weight: 600;
+  text-transform: capitalize;
+  position: relative;
+  z-index: 1;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button::after {
+  position: absolute;
+  content: "+";
+  border: none;
+  width: 30px;
+  height: 30px;
+  line-height: 24px;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+  border-radius: 50%;
+  color: #ffffff;
+  background: linear-gradient(-140deg, #43baff 0%, #7141b1 100%);
+  right: 35px;
+  transition: all .3s ease-out 0s;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-body {
+  font-size: 14px;
+  border-top: 1px solid #ebebeb;
+  padding: 30px 35px;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button:focus {
+  box-shadow: none;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button:not(.collapsed) {
+  background-color: #ffffff;
+  box-shadow: none;
+}
+
+.techwix-choose-us-section-02 .choose-us-right .faq-accordion .accordion-item .accordion-button:not(.collapsed)::after {
+  position: absolute;
+  content: "-";
+  border: none;
+  width: 30px;
+  height: 30px;
+  line-height: 24px;
+  text-align: center;
+  background: #e6eef8;
+  color: #0e0e0e;
+  transform: rotate(0);
+}
+
+@media only screen and (max-width: 1199px) {
+  .techwix-choose-us-section-02 {
+    padding-bottom: 350px;
+  }
+  .techwix-choose-us-section-02 .choose-us-left {
+    padding-right: 0;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .techwix-choose-us-section-02 {
+    padding-bottom: 330px;
+  }
+  .techwix-choose-us-section-02 .choose-us-right {
+    padding-left: 0;
+    padding-top: 15px;
+  }
+}
+
+.choose-us-item-02 {
+  background: var(--component);
+  box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  padding: 40px 45px 40px;
+  margin-top: 30px;
+  position: relative;
+  height: 340px;
+  overflow: hidden;
+}
+
+.choose-us-item-02 .choose-us-img img {
+  transition: all 0.3s linear;
+}
+
+.choose-us-item-02 .choose-us-content .title {
+  font-size: 22px;
+  line-height: 30px;
+  margin-top: 20px;
+  color: var(--color);
+}
+
+.choose-us-item-02 .choose-us-content p {
+  font-size: 16px;
+  line-height: 30px;
+  padding: 20px 0;
+  color: var(--p);
+  overflow-y: scroll;
+}
+
+.choose-us-item-02:hover .choose-us-img img {
+  transform: scale(0.9);
+}
+
+.techwix-choose-us-section-03 {
+  background: #ffffff;
+  padding-top: 120px;
+}
+
+@media only screen and (max-width: 1199px) {
+  .techwix-choose-us-section-03 {
+    padding-top: 100px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .techwix-choose-us-section-03 {
+    padding-top: 80px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .techwix-choose-us-section-03 {
+    padding-top: 60px;
+  }
+}
+
+.techwix-choose-us-section-04 {
+  background: #ffffff;
+  padding-top: 120px;
+}
+
+.techwix-choose-us-section-04 .choose-us-wrap {
+  margin-top: -30px;
+}
+
+.techwix-choose-us-section-04 .choose-us-content-wrap {
+  padding-top: 0;
+}
+
+.techwix-choose-us-section-04 .choose-us-item-02 {
+  border: 1px solid #e1e1e1;
+  box-shadow: none;
+}
